Use can login,see and mark task as finished

--- a/client/src/styles/StudentHome.css
+++ b/client/src/styles/StudentHome.css
@@ -11,6 +11,10 @@
   }
   .main-content {
     display: flex;
+    flex-direction: column;
+    vertical-align: middle;
+    align-items: center;
+    
   }
   .center-section {
     flex: 4;
